--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ iOSInjectionProject/
 ### Xcode ###
 # Xcode
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
+.DS_Store
 
 
 
